--- a/src/app/components/posts/post-card/PostCard.module.scss
+++ b/src/app/components/posts/post-card/PostCard.module.scss
@@ -4,7 +4,7 @@
 .postCard {
 	min-height: 152.14px;
 	width: 100%;
-	border-bottom: 1px solid $lighter;
+	border-bottom: 1px solid $heather;
 	padding: 15px;
 	font-size: $fontSizeLg;
 	display: flex;
