--- a/src/app/components/profile/edit-profile-header/EditProfileHeader.module.scss
+++ b/src/app/components/profile/edit-profile-header/EditProfileHeader.module.scss
@@ -10,7 +10,7 @@
 		font-weight: 600;
 		font-size: $fontSizeMd;
 		&:hover {
-			background-color: lighten($accent, 5%);
+			background-color: lighten($chetwodeBlue, 5%);
 		}
 	}
 }
