--- a/src/app/components/skeleton/profile/ProfileHeaderSkeleton.module.scss
+++ b/src/app/components/skeleton/profile/ProfileHeaderSkeleton.module.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/variables' as *;
 
 .profileHeader {
-	background-color: $dark;
+	background-color: $white;
 	width: 600px;
 	height: 218px;
 }
