--- a/src/app/components/sportsbook/match-details/chance-to-win/ChanceToWin.module.scss
+++ b/src/app/components/sportsbook/match-details/chance-to-win/ChanceToWin.module.scss
@@ -6,6 +6,8 @@
 	flex-direction: column;
 	gap: 10px;
 	padding-top: 2rem;
+	border: 1px solid $heather;
+	border-top: none;
 	.title {
 		font-size: 22px;
 	}
@@ -27,7 +29,7 @@
 			flex-direction: column;
 			align-items: center;
 			gap: 3px;
-			color: $light;
+			color: $charade;
 
 			.winner {
 				color: #20b46a;
