--- a/src/app/components/text-input/create-post/CreatePost.module.scss
+++ b/src/app/components/text-input/create-post/CreatePost.module.scss
@@ -1,7 +1,7 @@
 @use '../../../styles/variables' as *;
 
 .createPost {
-	background-color: $light;
+	background-color: $charade;
 	width: 100%;
 	min-height: 175px;
 	height: auto;
@@ -11,6 +11,7 @@
 	display: flex;
 	flex-direction: column;
 	max-height: 500px;
+	border: 1px solid $heather;
 	.textarea {
 		padding: 10px;
 		width: 100%;
@@ -45,7 +46,7 @@
 	}
 	.createPostButtons {
 		height: 45px;
-		background-color: #ebebeb;
+		background-color: $darkMystic;
 		display: flex;
 		align-items: center;
 		gap: 5px;
@@ -60,8 +61,8 @@
 					&::after {
 						position: absolute;
 						content: 'Post a photo';
-						background-color: $dark;
-						color: $light;
+						background-color: $white;
+						color: $charade;
 						padding: 3px 5px;
 						border-radius: 2px;
 						font-size: $fontSizeXs;
@@ -75,8 +76,8 @@
 					&::after {
 						position: absolute;
 						content: 'Post a gif';
-						background-color: $dark;
-						color: $light;
+						background-color: $white;
+						color: $charade;
 						padding: 3px 5px;
 						border-radius: 2px;
 						font-size: $fontSizeXs;
@@ -90,8 +91,8 @@
 					&::after {
 						position: absolute;
 						content: 'Post a poll';
-						background-color: $dark;
-						color: $light;
+						background-color: $white;
+						color: $charade;
 						padding: 3px 5px;
 						border-radius: 2px;
 						font-size: $fontSizeXs;
@@ -108,7 +109,7 @@
 			margin-left: auto;
 			font-weight: 500;
 			font-size: 14px;
-			color: $darker;
+			color: $charade;
 			.lengthError {
 				color: red;
 			}
@@ -123,7 +124,7 @@
 		margin-left: auto;
 		width: fit-content;
 		&:hover {
-			background-color: lighten($accent, 5%);
+			background-color: lighten($chetwodeBlue, 5%);
 		}
 	}
 }
