--- a/src/app/components/user/signup/Signup.module.scss
+++ b/src/app/components/user/signup/Signup.module.scss
@@ -15,7 +15,7 @@
 	.authContainer {
 		max-width: 500px;
 		padding: 2rem;
-		color: $light;
+		color: $charade;
 		border-radius: 4px;
 		display: flex;
 		flex-direction: column;
