--- a/src/app/signup/Page.module.scss
+++ b/src/app/signup/Page.module.scss
@@ -10,6 +10,6 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
-	background-color: $darker;
+	background-color: $mystic;
 	z-index: 999999;
 }
