--- a/src/app/styles/App.module.scss
+++ b/src/app/styles/App.module.scss
@@ -2,7 +2,7 @@
 @use './breakpoints' as *;
 
 .app {
-	background-color: $darker;
+	background-color: $mystic;
 	width: 100%;
 	min-height: 100vh;
 	position: relative;
