--- a/src/app/components/navigation-panel/NavigationPanel.module.scss
+++ b/src/app/components/navigation-panel/NavigationPanel.module.scss
@@ -5,8 +5,8 @@
 	height: calc(100vh - 45px);
 	max-width: 320px;
 	width: 320px;
-	background-color: $dark;
-	border-left: 1px solid $border;
+	background-color: $darkerMystic;
+	outline: 1px solid $heather;
 	position: sticky;
 	top: 45px;
 	display: none;
@@ -21,7 +21,7 @@
 		flex-direction: column;
 		padding: 10px 1rem;
 		.link {
-			padding: 20px 0;
+			padding: 10px 0;
 			display: flex;
 			gap: 10px;
 			align-items: center;
@@ -30,11 +30,11 @@
 				font-size: 16px;
 			}
 			a {
-				color: lightgray;
+				color: $charade;
 				text-decoration: none;
 				&:hover {
 					text-decoration: underline;
-					color: $light;
+					color: $charade;
 				}
 			}
 		}
