--- a/src/app/components/post-preview/PostPreview.module.scss
+++ b/src/app/components/post-preview/PostPreview.module.scss
@@ -1,7 +1,6 @@
 @use '../../styles/variables' as *;
 
 .postPreview {
-	background-color: #9baec8;
 	width: 100%;
 	height: fit-content;
 	max-height: 300px;
@@ -14,7 +13,8 @@
 	position: relative;
 	gap: 10px;
 	margin-bottom: 20px;
-	color: $dark;
+	color: $charade;
+	border: 1px solid $heather;
 	.close {
 		position: absolute;
 		right: 10px;
@@ -25,7 +25,7 @@
 		align-items: center;
 		border-radius: 3px;
 		&:hover {
-			background-color: lighten(#9baec8, 10%);
+			background-color: lighten(white, 10%);
 		}
 	}
 	.postUser {
@@ -64,7 +64,7 @@
 			text-overflow: ellipsis;
 			cursor: pointer;
 			text-decoration: none;
-			color: $dark;
+			color: $white;
 			&:hover {
 				text-decoration: underline;
 			}
