--- a/src/app/components/posts/post-card/post-card-parlay/PostCardParlay.module.scss
+++ b/src/app/components/posts/post-card/post-card-parlay/PostCardParlay.module.scss
@@ -2,8 +2,8 @@
 
 .parlayContainer {
 	padding: 10px 1rem;
-	background-color: $lighter;
-	border: 1px solid $border;
+	background-color: $alabaster;
+	border: 1px solid $heather;
 	width: 100%;
 	border-radius: 4px;
 	.header {
@@ -11,7 +11,7 @@
 		flex-direction: column;
 		position: relative;
 		gap: 10px;
-		border-bottom: 1px solid lighten($dark, 15%);
+		border-bottom: 1px solid lighten($white, 15%);
 		padding-bottom: 15px;
 		.title {
 			font-weight: 600;
@@ -21,7 +21,7 @@
 			font-size: $fontSizeMd;
 		}
 		.viewPicks {
-			background-color: lighten($lighter, 10%);
+			background-color: lighten($charade, 10%);
 			width: fit-content;
 			padding: 5px 10px;
 			border-radius: 22px;
@@ -36,7 +36,7 @@
 			}
 		}
 		.odds {
-			background-color: darken($lighter, 5%);
+			background-color: darken($charade, 5%);
 			padding: 8px 20px;
 			border-radius: 4px;
 			font-weight: 600;
@@ -45,7 +45,7 @@
 			display: flex;
 			align-items: center;
 			justify-content: center;
-			color: $accent;
+			color: $chetwodeBlue;
 			position: absolute;
 			right: 0;
 			top: 0;
@@ -62,7 +62,7 @@
 			position: relative;
 			padding-left: 20px;
 			.dot {
-				background-color: $dark;
+				background-color: $white;
 				width: 15px;
 				height: 15px;
 				border-radius: 50%;
@@ -73,7 +73,7 @@
 			}
 			.line {
 				position: absolute;
-				background-color: $border;
+				background-color: $heather;
 				height: calc(100% - 25px);
 				width: 1px;
 				left: 7px;
@@ -88,8 +88,8 @@
 				position: relative;
 				font-size: $fontSizeMd;
 				.odds {
-					background-color: darken($lighter, 5%);
-					color: $accent;
+					background-color: darken($charade, 5%);
+					color: $chetwodeBlue;
 					padding: 7px 20px;
 					border-radius: 4px;
 					font-size: 12px;
@@ -125,6 +125,6 @@
 		align-items: center;
 		justify-content: center;
 		padding-top: 25px;
-		color: lighten($dark, 55%);
+		color: lighten($white, 55%);
 	}
 }
