--- a/src/app/components/posts/post-card/post-card-poll/PostCardPoll.module.scss
+++ b/src/app/components/posts/post-card/post-card-poll/PostCardPoll.module.scss
@@ -41,7 +41,7 @@
 		gap: 10px;
 		font-size: 14px;
 		min-height: 40px;
-		border: 1px solid $border;
+		border: 1px solid $heather;
 		padding: 0 10px;
 		font-weight: 500;
 		cursor: pointer;
@@ -84,14 +84,14 @@
 		}
 	}
 	.selectedOptionWrapper {
-		outline: 2px solid $accent;
+		outline: 2px solid $chetwodeBlue;
 	}
 	.footer {
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
 		font-size: $fontSizeMd;
-		color: lighten($dark, 55%);
+		color: lighten($white, 55%);
 	}
 	.expireDate {
 		display: flex;
@@ -103,7 +103,7 @@
 			width: 5px;
 			height: 5px;
 			border-radius: 50%;
-			color: lighten($dark, 55%);
+			color: lighten($white, 55%);
 		}
 	}
 }
