--- a/src/app/components/posts/post-feed/post-feed-header/PostFeedHeader.module.scss
+++ b/src/app/components/posts/post-feed/post-feed-header/PostFeedHeader.module.scss
@@ -1,9 +1,9 @@
 @use '../../../../styles/variables' as *;
 
 .postFeedHeader {
-	background-color: lighten($dark, 8%);
+	background-color: $darkMystic;
 
-	border-bottom: 1px solid $border;
+	border-bottom: 1px solid $heather;
 	width: 100%;
 	height: 50px;
 	display: flex;
@@ -12,7 +12,7 @@
 	font-size: $fontSizeMd;
 	.tab,
 	.activeTab {
-		font-weight: 500;
+		font-weight: 600;
 		position: relative;
 		height: 100%;
 		display: flex;
@@ -21,9 +21,9 @@
 		cursor: pointer;
 	}
 	.activeTab {
-		color: $light;
+		color: $charade;
 		&:before {
-			border-color: transparent transparent $border;
+			border-color: transparent transparent $heather;
 			border-style: solid;
 			border-width: 0 10px 10px;
 			bottom: 0;
@@ -46,7 +46,7 @@
 			width: 0;
 			border-style: solid;
 			border-width: 0 10px 10px;
-			border-color: transparent transparent $dark;
+			border-color: transparent transparent $white;
 			bottom: -1px;
 		}
 	}
