--- a/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
+++ b/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
@@ -5,9 +5,9 @@
 	position: sticky;
 	top: 0px;
 	z-index: 2;
-	border-bottom: 1px solid $border;
+	border-bottom: 1px solid $heather;
 	padding-top: 20px;
-	background-color: $dark;
+	background-color: $white;
 	height: 45px;
 	margin-top: 12px;
 }
