--- a/src/app/components/sportsbook/match-card/MatchCard.module.scss
+++ b/src/app/components/sportsbook/match-card/MatchCard.module.scss
@@ -2,7 +2,7 @@
 
 .match {
 	padding: 1rem 1rem;
-	border-bottom: 1px solid $border;
+	border-bottom: 1px solid $heather;
 	max-width: 100%;
 	flex: 1 1 calc(50% - 20px);
 	position: relative;
@@ -11,7 +11,7 @@
 	&:nth-of-type(odd) {
 		&::after {
 			width: 1px;
-			background: $border;
+			background: $heather;
 			top: 35px;
 			bottom: 35px;
 			right: -0px;
@@ -29,7 +29,7 @@
 	.content {
 		padding: 10px;
 		text-decoration: none;
-		color: $light;
+		color: $charade;
 		display: flex;
 
 		gap: 10px;
@@ -37,7 +37,7 @@
 		justify-content: center;
 		transition: all 200ms ease-in-out;
 		&:hover {
-			background-color: lighten($dark, 5%);
+			background-color: lighten($white, 5%);
 		}
 		.leftSide {
 			flex: 1;
