--- a/src/app/components/sportsbook/match-details/feed-toggle/FeedToggle.module.scss
+++ b/src/app/components/sportsbook/match-details/feed-toggle/FeedToggle.module.scss
@@ -1,12 +1,12 @@
 @use '../../../../styles/variables' as *;
 
 .feedToggle {
-	background-color: darken($dark, 3%);
+	background-color: darken($white, 3%);
 	height: 55px;
 	width: 100%;
 	display: flex;
 	align-items: center;
 	text-transform: uppercase;
 	padding: 0 1rem;
-	border-top: 1px solid $border;
+	border-top: 1px solid $heather;
 }
