--- a/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
+++ b/src/app/components/sportsbook/sportsbook-games/SportsbookGames.module.scss
@@ -5,6 +5,7 @@
 	text-transform: uppercase;
 	padding: 1rem;
 	font-size: 20px;
+	// border: 1px solid $heather;
 }
 
 .dates {
@@ -12,11 +13,11 @@
 	gap: 10px;
 	padding: 10px 1rem;
 	padding-bottom: 2rem;
-	border-bottom: 1px solid $border;
+	border-bottom: 1px solid $heather;
 
 	span,
 	.activeDate {
-		border: 1px solid $border;
+		border: 1px solid $heather;
 		padding: 10px 14px;
 		border-radius: 22px;
 		font-size: $fontSizeSm;
@@ -24,13 +25,13 @@
 		transition: all 200ms ease-in-out;
 
 		&:hover {
-			background-color: lighten($dark, 5%);
-			color: $light;
+			background-color: darken($white, 5%);
+			color: $charade;
 		}
 	}
 	.activeDate {
-		background-color: lighten($dark, 5%);
-		color: $light;
+		background-color: darken($white, 5%);
+		color: $charade;
 	}
 }
 
