--- a/src/app/components/user/user-feed/UserFeed.module.scss
+++ b/src/app/components/user/user-feed/UserFeed.module.scss
@@ -1,8 +1,8 @@
 @use '../../../styles/variables' as *;
 
 .userFeed {
-	background-color: $dark;
-	color: $light;
+	background-color: $white;
+	color: $charade;
 	height: 100%;
 	padding: 20px 0;
 	padding-top: 5px;
@@ -10,7 +10,7 @@
 		display: flex;
 		padding: 20px 15px;
 		gap: 10px;
-		border-bottom: 1px solid $lighter;
+		border-bottom: 1px solid $alabaster;
 		&:hover {
 			cursor: pointer;
 			.displayName {
