--- a/src/app/post/[postId]/Page.module.scss
+++ b/src/app/post/[postId]/Page.module.scss
@@ -1,7 +1,14 @@
 @use '../../styles/mixins' as *;
+@use '../../styles/variables' as *;
 
 .main {
 	@include page();
+	padding-bottom: 0;
 	.feed {
+		.content {
+			border: 1px solid $heather;
+			border-top: 0;
+			height: calc(100vh - 4rem - 1px);
+		}
 	}
 }
