--- a/src/app/components/gifs/Gifs.module.scss
+++ b/src/app/components/gifs/Gifs.module.scss
@@ -11,12 +11,22 @@
 	position: absolute;
 	z-index: 9999;
 	top: 100px;
+	&::-webkit-scrollbar {
+		width: 7px;
+	}
+	&::-webkit-scrollbar-track {
+		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+	}
+	&::-webkit-scrollbar-thumb {
+		background-color: darkgrey;
+		outline: 1px solid slategrey;
+	}
 
 	z-index: 99999;
 	overflow-x: hidden;
-	background-color: $charade;
-	border-radius: 6px;
-	outline: 1px solid lightgray;
+	background-color: $white;
+	border-radius: 4px;
+	outline: 1px solid $heather;
 	width: 500px;
 	max-height: 500px;
 	max-width: 500px;
@@ -26,7 +36,7 @@
 	.search {
 		position: sticky;
 		top: 0;
-		background-color: $charade;
+		background-color: $white;
 		z-index: 99999999;
 		padding: 10px 1rem;
 		width: 100%;
