--- a/src/app/components/modals/Modal.module.scss
+++ b/src/app/components/modals/Modal.module.scss
@@ -13,11 +13,12 @@
 	min-width: 500px;
 	padding: 1rem;
 	border-radius: 4px;
-	background-color: $charade;
-	color: $white;
+	background-color: $white;
+	color: $charade;
 	transition: 300ms ease-in-out;
 	opacity: 1;
 	height: fit-content;
+	border: 1px solid $heather;
 	@include breakpoint(xs) {
 		min-width: 100%;
 		height: 100vh;
