--- a/src/app/components/modals/bet-slip/BetSlip.module.scss
+++ b/src/app/components/modals/bet-slip/BetSlip.module.scss
@@ -113,9 +113,10 @@
 			textarea {
 				width: 100%;
 				height: 100px;
-				border: 1px solid lightgray;
+				border: 1px solid $heather;
 				resize: none;
 				padding: 10px;
+				border-radius: 4px;
 			}
 		}
 	}
