--- a/src/app/components/profile/edit-profile-body/EditProfileBody.module.scss
+++ b/src/app/components/profile/edit-profile-body/EditProfileBody.module.scss
@@ -22,15 +22,14 @@
 		}
 		textarea {
 			height: 75px;
-			background-color: #131419;
+			background-color: darken($white, 5%);
 			border: none;
 			padding: 10px;
 			font-size: 12px;
-			color: #9ab9c4;
+			color: $charade;
 			border-radius: 4px;
-			border: 1px solid black;
 			&::placeholder {
-				color: lightgray;
+				color: $charade;
 			}
 		}
 	}
