--- a/src/app/edit-profile/[username]/Page.module.scss
+++ b/src/app/edit-profile/[username]/Page.module.scss
@@ -8,6 +8,6 @@
 		border: 1px solid $heather;
 		border-top: 0;
 		border-bottom: 0;
-		height: calc(100vh - 4rem - 1px);
+		min-height: calc(100vh - 4rem - 1px);
 	}
 }
