--- a/src/app/components/posts/post-feed/PostFeed.module.scss
+++ b/src/app/components/posts/post-feed/PostFeed.module.scss
@@ -1,11 +1,22 @@
 @use '../../../styles/_variables.scss' as *;
+@use '../../../styles/_breakpoints.scss' as *;
 
 .postFeed {
 	background-color: $white;
 	color: $charade;
 	height: 100%;
-	min-height: 100vh;
+	min-height: calc(100vh - 50px);
 	display: block;
 	border: 1px solid $heather;
 	border-top: none;
+	@include breakpoint(sm) {
+		min-height: calc(100vh - 50px);
+		top: 50px;
+		position: relative;
+	}
+	@include breakpoint(xs) {
+		min-height: 100vh;
+		top: 0px;
+		position: relative;
+	}
 }
