--- a/src/app/components/text-input/create-comment/CreateComment.module.scss
+++ b/src/app/components/text-input/create-comment/CreateComment.module.scss
@@ -52,6 +52,7 @@
 						border-radius: 2px;
 						font-size: $fontSizeXs;
 						bottom: 36px;
+						border: 1px solid $heather;
 					}
 				}
 			}
@@ -67,6 +68,7 @@
 						border-radius: 2px;
 						font-size: $fontSizeXs;
 						bottom: 36px;
+						border: 1px solid $heather;
 					}
 				}
 			}
@@ -82,6 +84,7 @@
 						border-radius: 2px;
 						font-size: $fontSizeXs;
 						bottom: 36px;
+						border: 1px solid $heather;
 					}
 				}
 			}
