--- a/src/app/components/profile/profile-header/ProfileHeader.module.scss
+++ b/src/app/components/profile/profile-header/ProfileHeader.module.scss
@@ -1,10 +1,12 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as *;
 
 .profileHeader {
 	background-color: lighten($white, 5%);
 	padding: 1rem;
 	border: 1px solid $heather;
 	border-top: none;
+
 	.top {
 		display: flex;
 		gap: 10px;
