--- a/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
+++ b/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
@@ -1,4 +1,5 @@
 @use '../../../styles/variables' as *;
+@use '../../../styles/breakpoints' as *;
 
 .feedHeader {
 	font-weight: 500;
@@ -10,4 +11,7 @@
 	background-color: $white;
 	height: 45px;
 	margin-top: 12px;
+	@include breakpoint(sm) {
+		margin-top: 0;
+	}
 }
