--- a/src/app/styles/App.module.scss
+++ b/src/app/styles/App.module.scss
@@ -6,7 +6,13 @@
 	width: 100%;
 	min-height: 100vh;
 	position: relative;
-
+	@include breakpoint(sm) {
+		max-width: 630px;
+		min-width: calc(100% - 284px);
+	}
+	@include breakpoint(xs) {
+		min-width: 100vw;
+	}
 	.main {
 		max-width: 600px;
 		display: block;
