--- a/src/app/components/profile/profile-header/ProfileHeader.module.scss
+++ b/src/app/components/profile/profile-header/ProfileHeader.module.scss
@@ -4,7 +4,7 @@
 .profileHeader {
 	background-color: lighten($white, 5%);
 	padding: 1rem;
-	border: 1px solid $heather;
+	border-bottom: 1px solid $heather;
 	border-top: none;
 
 	.top {
