--- a/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
+++ b/src/app/components/skeleton/feed-header/FeedHeaderSkeleton.module.scss
@@ -8,10 +8,85 @@
 	z-index: 2;
 	border-bottom: 1px solid $heather;
 	padding-top: 20px;
-	background-color: $white;
+	background-color: $mystic;
 	height: 45px;
-	margin-top: 12px;
 	@include breakpoint(sm) {
 		margin-top: 0;
+	}
+	.header {
+		background-color: lighten($white, 7%);
+		height: 45px;
+		border: 1px solid $heather;
+		border-top-right-radius: 4px;
+		border-top-left-radius: 4px;
+
+		@include breakpoint(sm) {
+			border-top: 0;
+			border-radius: 0;
+		}
+		@include breakpoint(xs) {
+			height: 55px;
+		}
+		display: flex;
+		align-items: center;
+		padding: 0 15px;
+		gap: 5px;
+		background-color: $white;
+		.mobile {
+			display: none;
+			margin-left: auto;
+			align-items: center;
+			border: 1px solid $heather;
+			padding: 4px 8px;
+			border-radius: 22px;
+			background-color: lighten($white, 5%);
+			cursor: pointer;
+			gap: 5px;
+			img {
+				max-width: 20px;
+				max-height: 20px;
+				border-radius: 50% !important;
+				border: 1px solid $charade;
+			}
+			@include breakpoint(xs) {
+				display: flex;
+			}
+			@include breakpoint(sm) {
+				display: none;
+			}
+			strong {
+				color: $charade;
+				font-weight: 500;
+				font-size: $fontSizeSm;
+				@include breakpoint(xs) {
+					display: none;
+				}
+			}
+			button {
+				width: fit-content;
+				font-size: $fontSizeLg;
+
+				&:hover {
+					background-color: lighten($chetwodeBlue, 5%);
+				}
+			}
+			svg {
+				margin-left: 10px;
+			}
+		}
+
+		.back,
+		.label {
+			cursor: pointer;
+			color: $charade;
+			text-decoration: none;
+			font-weight: 500;
+		}
+		.back {
+			color: $chetwodeBlue;
+			&:hover {
+				text-decoration: underline;
+			}
+		}
 	}
 }
