--- a/src/app/components/nav/Nav.module.scss
+++ b/src/app/components/nav/Nav.module.scss
@@ -10,21 +10,25 @@
 		display: flex;
 	}
 	.logo {
-		height: 45px;
+		height: 55px;
 		display: flex;
 		align-items: center;
 		font-size: 22px;
 		color: $charade;
+		border-bottom: 1px solid $heather;
+		padding-bottom: 10px;
 	}
 	.links {
 		display: flex;
 		flex-direction: column;
+		border-bottom: 1px solid $heather;
+		padding: 1rem 0;
 		.link {
-			padding: 20px 0;
+			padding: 15px 0;
 			display: flex;
 			gap: 10px;
 			align-items: center;
-
+			height: 48px;
 			svg {
 				font-size: 16px;
 			}
