--- a/src/app/styles/globals.scss
+++ b/src/app/styles/globals.scss
@@ -23,8 +23,8 @@ body {
 		box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
 	}
 	&::-webkit-scrollbar-thumb {
-		background-color: darkgrey;
-		outline: 1px solid slategrey;
+		background-color: $comet;
+		outline: 1px solid $darkerMystic;
 	}
 }
 
@@ -41,8 +41,9 @@ body {
 	}
 	.left-sidebar,
 	.right-sidebar {
-		width: 287px;
-		min-width: 287px;
+		width: 285px;
+		min-width: 285px;
+		max-width: 285px;
 		padding: 0 15px;
 		position: sticky;
 		top: 10px;
